--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
         <init-param>
             <!--配置dispatcher.xml作为mvc的配置文件-->
             <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
+            <param-value>classpath:/spring/spring-*.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
 
