--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     <display-name>Archetype Created Web Application</display-name>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/applicationContext.xml</param-value>
+        <param-value>classpath*:spring.xml,/WEB-INF/applicationContext.xml</param-value>
     </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -21,7 +21,6 @@
             <param-value>classpath:/spring/spring-*.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
-
     </servlet>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
