--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,18 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars.bowergithub.dreamerlxb</groupId>
+            <artifactId>jquery-easyui</artifactId>
+            <version>1.9.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
