--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <version>1.9.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
